UI fixes for TV and TVS files where text-right changed to text-left

--- a/devtemplate/templates/AccountPayables_templateTV.html
+++ b/devtemplate/templates/AccountPayables_templateTV.html
@@ -6,10 +6,10 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="AccountPayables-APID-<%%VALUE(id)%%>" class="AccountPayables-APID"><%%SELECT%%><%%VALUE(APID)%%><%%ENDSELECT%%></td>
-		<td id="AccountPayables-OrderID-<%%VALUE(id)%%>" class="AccountPayables-OrderID text-right"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
-		<td id="AccountPayables-fo_Vendor-<%%VALUE(id)%%>" class="AccountPayables-fo_Vendor text-right"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
+		<td id="AccountPayables-OrderID-<%%VALUE(id)%%>" class="AccountPayables-OrderID text-left"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
+		<td id="AccountPayables-fo_Vendor-<%%VALUE(id)%%>" class="AccountPayables-fo_Vendor text-left"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
 		<td id="AccountPayables-fo_ShipVia-<%%VALUE(id)%%>" class="AccountPayables-fo_ShipVia"><%%SELECT%%><%%VALUE(fo_ShipVia)%%><%%ENDSELECT%%></td>
-		<td id="AccountPayables-fo_UnitPrice-<%%VALUE(id)%%>" class="AccountPayables-fo_UnitPrice text-right"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
+		<td id="AccountPayables-fo_UnitPrice-<%%VALUE(id)%%>" class="AccountPayables-fo_UnitPrice text-left"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
 		<td id="AccountPayables-ot_ap_Review-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="AccountPayables-ot_ap_Approval-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="AccountPayables-ot_ap_QC-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
