--- a/devtemplate/templates/ActCard_templateTV.html
+++ b/devtemplate/templates/ActCard_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ActCard-ACID-<%%VALUE(id)%%>" class="ActCard-ACID"><%%SELECT%%><%%VALUE(ACID)%%><%%ENDSELECT%%></td>
-		<td id="ActCard-ccpID-<%%VALUE(id)%%>" class="ActCard-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="ActCard-ccpID-<%%VALUE(id)%%>" class="ActCard-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="ActCard-fo_Classification-<%%VALUE(id)%%>" class="ActCard-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
 		<td id="ActCard-fo_RequiredDate-<%%VALUE(id)%%>" class="ActCard-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="ActCard-ot_ap_filed-<%%VALUE(id)%%>" class="ActCard-ot_ap_filed"><%%SELECT%%><%%VALUE(ot_ap_filed)%%><%%ENDSELECT%%></td>
