--- a/devtemplate/templates/ActCard_templateTVS.html
+++ b/devtemplate/templates/ActCard_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ActCard-ACID-<%%VALUE(id)%%>" class="ActCard-ACID"><%%VALUE(ACID)%%></td>
-		<td id="ActCard-ccpID-<%%VALUE(id)%%>" class="ActCard-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="ActCard-ccpID-<%%VALUE(id)%%>" class="ActCard-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="ActCard-fo_Classification-<%%VALUE(id)%%>" class="ActCard-fo_Classification"><%%VALUE(fo_Classification)%%></td>
 		<td id="ActCard-fo_RequiredDate-<%%VALUE(id)%%>" class="ActCard-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="ActCard-ot_ap_filed-<%%VALUE(id)%%>" class="ActCard-ot_ap_filed"><%%VALUE(ot_ap_filed)%%></td>
