--- a/devtemplate/templates/Bi_WeeklyMeeting_templateTV.html
+++ b/devtemplate/templates/Bi_WeeklyMeeting_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Bi_WeeklyMeeting-BwmID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-BwmID"><%%SELECT%%><%%VALUE(BwmID)%%><%%ENDSELECT%%></td>
-		<td id="Bi_WeeklyMeeting-ccpID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="Bi_WeeklyMeeting-ccpID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="Bi_WeeklyMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="Bi_WeeklyMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Bi_WeeklyMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
