--- a/devtemplate/templates/Breakdown_templateTV.html
+++ b/devtemplate/templates/Breakdown_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Breakdown-recID-<%%VALUE(Id)%%>" class="Breakdown-recID"><%%SELECT%%><%%VALUE(recID)%%><%%ENDSELECT%%></td>
-		<td id="Breakdown-MTSID-<%%VALUE(Id)%%>" class="Breakdown-MTSID text-right"><%%SELECT%%><%%VALUE(MTSID)%%><%%ENDSELECT%%></td>
+		<td id="Breakdown-MTSID-<%%VALUE(Id)%%>" class="Breakdown-MTSID text-left"><%%SELECT%%><%%VALUE(MTSID)%%><%%ENDSELECT%%></td>
 		<td id="Breakdown-ResourceId-<%%VALUE(Id)%%>" class="Breakdown-ResourceId"><%%SELECT%%><%%VALUE(ResourceId)%%><%%ENDSELECT%%></td>
 		<td id="Breakdown-Title-<%%VALUE(Id)%%>" class="Breakdown-Title"><%%SELECT%%><%%VALUE(Title)%%><%%ENDSELECT%%></td>
 		<td id="Breakdown-ot_ap_Review-<%%VALUE(Id)%%>" class="Breakdown-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
