--- a/devtemplate/templates/Breakdown_templateTVS.html
+++ b/devtemplate/templates/Breakdown_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Breakdown-recID-<%%VALUE(Id)%%>" class="Breakdown-recID"><%%VALUE(recID)%%></td>
-		<td id="Breakdown-MTSID-<%%VALUE(Id)%%>" class="Breakdown-MTSID text-right"><%%VALUE(MTSID)%%></td>
+		<td id="Breakdown-MTSID-<%%VALUE(Id)%%>" class="Breakdown-MTSID text-left"><%%VALUE(MTSID)%%></td>
 		<td id="Breakdown-ResourceId-<%%VALUE(Id)%%>" class="Breakdown-ResourceId"><%%VALUE(ResourceId)%%></td>
 		<td id="Breakdown-Title-<%%VALUE(Id)%%>" class="Breakdown-Title"><%%VALUE(Title)%%></td>
 		<td id="Breakdown-ot_ap_Review-<%%VALUE(Id)%%>" class="Breakdown-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
