--- a/devtemplate/templates/Campaign_templateTV.html
+++ b/devtemplate/templates/Campaign_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Campaign-CampaignID-<%%VALUE(id)%%>" class="Campaign-CampaignID"><%%SELECT%%><%%VALUE(CampaignID)%%><%%ENDSELECT%%></td>
-		<td id="Campaign-ccpID-<%%VALUE(id)%%>" class="Campaign-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="Campaign-ccpID-<%%VALUE(id)%%>" class="Campaign-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="Campaign-fo_RequiredDate-<%%VALUE(id)%%>" class="Campaign-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="Campaign-ot_ap_Review-<%%VALUE(id)%%>" class="Campaign-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Campaign-ot_ap_Approval-<%%VALUE(id)%%>" class="Campaign-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
