--- a/devtemplate/templates/ClaimRecord_templateTVS.html
+++ b/devtemplate/templates/ClaimRecord_templateTVS.html
@@ -6,9 +6,9 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ClaimRecord-CRID-<%%VALUE(id)%%>" class="ClaimRecord-CRID"><%%VALUE(CRID)%%></td>
-		<td id="ClaimRecord-ReceivablesID-<%%VALUE(id)%%>" class="ClaimRecord-ReceivablesID text-right"><%%VALUE(ReceivablesID)%%></td>
+		<td id="ClaimRecord-ReceivablesID-<%%VALUE(id)%%>" class="ClaimRecord-ReceivablesID text-left"><%%VALUE(ReceivablesID)%%></td>
 		<td id="ClaimRecord-fo_DocItem-<%%VALUE(id)%%>" class="ClaimRecord-fo_DocItem"><%%VALUE(fo_DocItem)%%></td>
-		<td id="ClaimRecord-fo_UnitPrice-<%%VALUE(id)%%>" class="ClaimRecord-fo_UnitPrice text-right"><%%VALUE(fo_UnitPrice)%%></td>
+		<td id="ClaimRecord-fo_UnitPrice-<%%VALUE(id)%%>" class="ClaimRecord-fo_UnitPrice text-left"><%%VALUE(fo_UnitPrice)%%></td>
 		<td id="ClaimRecord-ot_ap_Review-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="ClaimRecord-ot_ap_Approval-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="ClaimRecord-ot_ap_QC-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
