--- a/devtemplate/templates/DailyProgressReport_templateTV.html
+++ b/devtemplate/templates/DailyProgressReport_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DailyProgressReport-ProgressReportId-<%%VALUE(id)%%>" class="DailyProgressReport-ProgressReportId"><%%SELECT%%><%%VALUE(ProgressReportId)%%><%%ENDSELECT%%></td>
-		<td id="DailyProgressReport-DPRID-<%%VALUE(id)%%>" class="DailyProgressReport-DPRID text-right"><%%SELECT%%><%%VALUE(DPRID)%%><%%ENDSELECT%%></td>
+		<td id="DailyProgressReport-DPRID-<%%VALUE(id)%%>" class="DailyProgressReport-DPRID text-left"><%%SELECT%%><%%VALUE(DPRID)%%><%%ENDSELECT%%></td>
 		<td id="DailyProgressReport-fo_Class-<%%VALUE(id)%%>" class="DailyProgressReport-fo_Class"><%%SELECT%%><%%VALUE(fo_Class)%%><%%ENDSELECT%%></td>
 		<td id="DailyProgressReport-fo_DocItem-<%%VALUE(id)%%>" class="DailyProgressReport-fo_DocItem"><%%SELECT%%><%%VALUE(fo_DocItem)%%><%%ENDSELECT%%></td>
 		<td id="DailyProgressReport-ot_ap_Review-<%%VALUE(id)%%>" class="DailyProgressReport-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
