--- a/devtemplate/templates/DailyProgressReport_templateTVS.html
+++ b/devtemplate/templates/DailyProgressReport_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DailyProgressReport-ProgressReportId-<%%VALUE(id)%%>" class="DailyProgressReport-ProgressReportId"><%%VALUE(ProgressReportId)%%></td>
-		<td id="DailyProgressReport-DPRID-<%%VALUE(id)%%>" class="DailyProgressReport-DPRID text-right"><%%VALUE(DPRID)%%></td>
+		<td id="DailyProgressReport-DPRID-<%%VALUE(id)%%>" class="DailyProgressReport-DPRID text-left"><%%VALUE(DPRID)%%></td>
 		<td id="DailyProgressReport-fo_Class-<%%VALUE(id)%%>" class="DailyProgressReport-fo_Class"><%%VALUE(fo_Class)%%></td>
 		<td id="DailyProgressReport-fo_DocItem-<%%VALUE(id)%%>" class="DailyProgressReport-fo_DocItem"><%%VALUE(fo_DocItem)%%></td>
 		<td id="DailyProgressReport-ot_ap_Review-<%%VALUE(id)%%>" class="DailyProgressReport-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
