--- a/devtemplate/templates/DeliveryOrder_templateTV.html
+++ b/devtemplate/templates/DeliveryOrder_templateTV.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DeliveryOrder-DOID-<%%VALUE(id)%%>" class="DeliveryOrder-DOID"><%%SELECT%%><%%VALUE(DOID)%%><%%ENDSELECT%%></td>
-		<td id="DeliveryOrder-OrderID-<%%VALUE(id)%%>" class="DeliveryOrder-OrderID text-right"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
-		<td id="DeliveryOrder-fo_Vendor-<%%VALUE(id)%%>" class="DeliveryOrder-fo_Vendor text-right"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
+		<td id="DeliveryOrder-OrderID-<%%VALUE(id)%%>" class="DeliveryOrder-OrderID text-left"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
+		<td id="DeliveryOrder-fo_Vendor-<%%VALUE(id)%%>" class="DeliveryOrder-fo_Vendor text-left"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
 		<td id="DeliveryOrder-fo_ShipVia-<%%VALUE(id)%%>" class="DeliveryOrder-fo_ShipVia"><%%SELECT%%><%%VALUE(fo_ShipVia)%%><%%ENDSELECT%%></td>
 		<td id="DeliveryOrder-ot_ap_Review-<%%VALUE(id)%%>" class="DeliveryOrder-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="DeliveryOrder-ot_ap_Approval-<%%VALUE(id)%%>" class="DeliveryOrder-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
