--- a/devtemplate/templates/DeliveryOrder_templateTVS.html
+++ b/devtemplate/templates/DeliveryOrder_templateTVS.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DeliveryOrder-DOID-<%%VALUE(id)%%>" class="DeliveryOrder-DOID"><%%VALUE(DOID)%%></td>
-		<td id="DeliveryOrder-OrderID-<%%VALUE(id)%%>" class="DeliveryOrder-OrderID text-right"><%%VALUE(OrderID)%%></td>
-		<td id="DeliveryOrder-fo_Vendor-<%%VALUE(id)%%>" class="DeliveryOrder-fo_Vendor text-right"><%%VALUE(fo_Vendor)%%></td>
+		<td id="DeliveryOrder-OrderID-<%%VALUE(id)%%>" class="DeliveryOrder-OrderID text-left"><%%VALUE(OrderID)%%></td>
+		<td id="DeliveryOrder-fo_Vendor-<%%VALUE(id)%%>" class="DeliveryOrder-fo_Vendor text-left"><%%VALUE(fo_Vendor)%%></td>
 		<td id="DeliveryOrder-fo_ShipVia-<%%VALUE(id)%%>" class="DeliveryOrder-fo_ShipVia"><%%VALUE(fo_ShipVia)%%></td>
 		<td id="DeliveryOrder-ot_ap_Review-<%%VALUE(id)%%>" class="DeliveryOrder-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="DeliveryOrder-ot_ap_Approval-<%%VALUE(id)%%>" class="DeliveryOrder-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
