--- a/devtemplate/templates/DesignProposal_templateTVS.html
+++ b/devtemplate/templates/DesignProposal_templateTVS.html
@@ -10,7 +10,7 @@
 		<td id="DesignProposal-fo_Type-<%%VALUE(id)%%>" class="DesignProposal-fo_Type"><%%VALUE(fo_Type)%%></td>
 		<td id="DesignProposal-fo_Intro-<%%VALUE(id)%%>" class="DesignProposal-fo_Intro"><%%VALUE(fo_Intro)%%></td>
 		<td id="DesignProposal-fo_RecSub-<%%VALUE(id)%%>" class="DesignProposal-fo_RecSub"><%%VALUE(fo_RecSub)%%></td>
-		<td id="DesignProposal-fo_Price-<%%VALUE(id)%%>" class="DesignProposal-fo_Price text-right"><%%VALUE(fo_Price)%%></td>
+		<td id="DesignProposal-fo_Price-<%%VALUE(id)%%>" class="DesignProposal-fo_Price text-left"><%%VALUE(fo_Price)%%></td>
 		<td id="DesignProposal-ot_ap_Review-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="DesignProposal-ot_ap_Approval-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="DesignProposal-ot_ap_QC-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
