--- a/devtemplate/templates/DrillNInspection_templateTVS.html
+++ b/devtemplate/templates/DrillNInspection_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DrillNInspection-DillID-<%%VALUE(id)%%>" class="DrillNInspection-DillID"><%%VALUE(DillID)%%></td>
-		<td id="DrillNInspection-ccpID-<%%VALUE(id)%%>" class="DrillNInspection-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="DrillNInspection-ccpID-<%%VALUE(id)%%>" class="DrillNInspection-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="DrillNInspection-fo_Classification-<%%VALUE(id)%%>" class="DrillNInspection-fo_Classification"><%%VALUE(fo_Classification)%%></td>
 		<td id="DrillNInspection-fo_RequiredDate-<%%VALUE(id)%%>" class="DrillNInspection-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="DrillNInspection-ot_ap_Review-<%%VALUE(id)%%>" class="DrillNInspection-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
