--- a/devtemplate/templates/EventNotification_templateTV.html
+++ b/devtemplate/templates/EventNotification_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="EventNotification-ENID-<%%VALUE(id)%%>" class="EventNotification-ENID"><%%SELECT%%><%%VALUE(ENID)%%><%%ENDSELECT%%></td>
-		<td id="EventNotification-ccpID-<%%VALUE(id)%%>" class="EventNotification-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="EventNotification-ccpID-<%%VALUE(id)%%>" class="EventNotification-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="EventNotification-fo_RequiredDate-<%%VALUE(id)%%>" class="EventNotification-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="EventNotification-ot_ap_filed-<%%VALUE(id)%%>" class="EventNotification-ot_ap_filed"><%%SELECT%%><%%VALUE(ot_ap_filed)%%><%%ENDSELECT%%></td>
 		<td id="EventNotification-ot_ap_lastmodified-<%%VALUE(id)%%>" class="EventNotification-ot_ap_lastmodified"><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></td>
