--- a/devtemplate/templates/IMSReport_templateTV.html
+++ b/devtemplate/templates/IMSReport_templateTV.html
@@ -7,6 +7,6 @@
 
 		<td id="IMSReport-Title-<%%VALUE(Postid)%%>" class="IMSReport-Title"><%%SELECT%%><%%VALUE(Title)%%><%%ENDSELECT%%></td>
 		<td id="IMSReport-image-<%%VALUE(Postid)%%>" class="IMSReport-image"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(image)%%>" data-lightbox="IMSReport-image"><img src="thumbnail.php?i=<%%VALUE(image)%%>&t=IMSReport&f=image&v=tv" class="img-thumbnail"></a></td>
-		<td id="IMSReport-ClosedIssue-<%%VALUE(Postid)%%>" class="IMSReport-ClosedIssue text-right"><%%SELECT%%><%%VALUE(ClosedIssue)%%><%%ENDSELECT%%></td>
+		<td id="IMSReport-ClosedIssue-<%%VALUE(Postid)%%>" class="IMSReport-ClosedIssue text-left"><%%SELECT%%><%%VALUE(ClosedIssue)%%><%%ENDSELECT%%></td>
 		<td id="IMSReport-filed-<%%VALUE(Postid)%%>" class="IMSReport-filed"><%%SELECT%%><%%VALUE(filed)%%><%%ENDSELECT%%></td>
 		<td id="IMSReport-last_modified-<%%VALUE(Postid)%%>" class="IMSReport-last_modified"><%%SELECT%%><%%VALUE(last_modified)%%><%%ENDSELECT%%></td>
