--- a/devtemplate/templates/Item_templateTV.html
+++ b/devtemplate/templates/Item_templateTV.html
@@ -9,7 +9,7 @@
 		<td id="Item-ProductName-<%%VALUE(ProductID)%%>" class="Item-ProductName"><%%SELECT%%><%%VALUE(ProductName)%%><%%ENDSELECT%%></td>
 		<td id="Item-fo_SupplierID-<%%VALUE(ProductID)%%>" class="Item-fo_SupplierID"><%%SELECT%%><%%VALUE(fo_SupplierID)%%><%%ENDSELECT%%></td>
 		<td id="Item-fo_CategoryID-<%%VALUE(ProductID)%%>" class="Item-fo_CategoryID"><%%SELECT%%><%%VALUE(fo_CategoryID)%%><%%ENDSELECT%%></td>
-		<td id="Item-fo_UnitPrice-<%%VALUE(ProductID)%%>" class="Item-fo_UnitPrice text-right"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
-		<td id="Item-fo_Discontinued-<%%VALUE(ProductID)%%>" class="Item-fo_Discontinued text-right"><%%SELECT%%><%%VALUE(fo_Discontinued)%%><%%ENDSELECT%%></td>
+		<td id="Item-fo_UnitPrice-<%%VALUE(ProductID)%%>" class="Item-fo_UnitPrice text-left"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
+		<td id="Item-fo_Discontinued-<%%VALUE(ProductID)%%>" class="Item-fo_Discontinued text-left"><%%SELECT%%><%%VALUE(fo_Discontinued)%%><%%ENDSELECT%%></td>
 		<td id="Item-ot_ap_filed-<%%VALUE(ProductID)%%>" class="Item-ot_ap_filed"><%%SELECT%%><%%VALUE(ot_ap_filed)%%><%%ENDSELECT%%></td>
 		<td id="Item-ot_ap_lastmodified-<%%VALUE(ProductID)%%>" class="Item-ot_ap_lastmodified"><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></td>
