--- a/devtemplate/templates/Logistics_templateTV.html
+++ b/devtemplate/templates/Logistics_templateTV.html
@@ -7,7 +7,7 @@
 
 		<td id="Logistics-LogisticID-<%%VALUE(ShipperID)%%>" class="Logistics-LogisticID"><%%SELECT%%><%%VALUE(LogisticID)%%><%%ENDSELECT%%></td>
 		<td id="Logistics-CompanyName-<%%VALUE(ShipperID)%%>" class="Logistics-CompanyName"><%%SELECT%%><%%VALUE(CompanyName)%%><%%ENDSELECT%%></td>
-		<td id="Logistics-fo_AVList-<%%VALUE(ShipperID)%%>" class="Logistics-fo_AVList text-right"><%%SELECT%%><%%VALUE(fo_AVList)%%><%%ENDSELECT%%></td>
+		<td id="Logistics-fo_AVList-<%%VALUE(ShipperID)%%>" class="Logistics-fo_AVList text-left"><%%SELECT%%><%%VALUE(fo_AVList)%%><%%ENDSELECT%%></td>
 		<td id="Logistics-fo_Phone-<%%VALUE(ShipperID)%%>" class="Logistics-fo_Phone"><%%SELECT%%><%%VALUE(fo_Phone)%%><%%ENDSELECT%%></td>
 		<td id="Logistics-ot_ap_Review-<%%VALUE(ShipperID)%%>" class="Logistics-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Logistics-ot_ap_Approval-<%%VALUE(ShipperID)%%>" class="Logistics-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
