--- a/devtemplate/templates/Logistics_templateTVS.html
+++ b/devtemplate/templates/Logistics_templateTVS.html
@@ -7,7 +7,7 @@
 
 		<td id="Logistics-LogisticID-<%%VALUE(ShipperID)%%>" class="Logistics-LogisticID"><%%VALUE(LogisticID)%%></td>
 		<td id="Logistics-CompanyName-<%%VALUE(ShipperID)%%>" class="Logistics-CompanyName"><%%VALUE(CompanyName)%%></td>
-		<td id="Logistics-fo_AVList-<%%VALUE(ShipperID)%%>" class="Logistics-fo_AVList text-right"><%%VALUE(fo_AVList)%%></td>
+		<td id="Logistics-fo_AVList-<%%VALUE(ShipperID)%%>" class="Logistics-fo_AVList text-left"><%%VALUE(fo_AVList)%%></td>
 		<td id="Logistics-fo_Phone-<%%VALUE(ShipperID)%%>" class="Logistics-fo_Phone"><%%VALUE(fo_Phone)%%></td>
 		<td id="Logistics-ot_ap_Review-<%%VALUE(ShipperID)%%>" class="Logistics-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Logistics-ot_ap_Approval-<%%VALUE(ShipperID)%%>" class="Logistics-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
