--- a/devtemplate/templates/MWConditionBased_templateTV.html
+++ b/devtemplate/templates/MWConditionBased_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWConditionBased-CondBaseID-<%%VALUE(id)%%>" class="MWConditionBased-CondBaseID"><%%SELECT%%><%%VALUE(CondBaseID)%%><%%ENDSELECT%%></td>
-		<td id="MWConditionBased-MwoID-<%%VALUE(id)%%>" class="MWConditionBased-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWConditionBased-MwoID-<%%VALUE(id)%%>" class="MWConditionBased-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWConditionBased-fo_EmployeeID-<%%VALUE(id)%%>" class="MWConditionBased-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWConditionBased-fo_Position-<%%VALUE(id)%%>" class="MWConditionBased-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWConditionBased-ot_ap_Review-<%%VALUE(id)%%>" class="MWConditionBased-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
