--- a/devtemplate/templates/MWConditionBased_templateTVS.html
+++ b/devtemplate/templates/MWConditionBased_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWConditionBased-CondBaseID-<%%VALUE(id)%%>" class="MWConditionBased-CondBaseID"><%%VALUE(CondBaseID)%%></td>
-		<td id="MWConditionBased-MwoID-<%%VALUE(id)%%>" class="MWConditionBased-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWConditionBased-MwoID-<%%VALUE(id)%%>" class="MWConditionBased-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWConditionBased-fo_EmployeeID-<%%VALUE(id)%%>" class="MWConditionBased-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWConditionBased-fo_Position-<%%VALUE(id)%%>" class="MWConditionBased-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWConditionBased-ot_ap_Review-<%%VALUE(id)%%>" class="MWConditionBased-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
