--- a/devtemplate/templates/MWOCorrective_templateTVS.html
+++ b/devtemplate/templates/MWOCorrective_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOCorrective-CorrectiveID-<%%VALUE(id)%%>" class="MWOCorrective-CorrectiveID"><%%VALUE(CorrectiveID)%%></td>
-		<td id="MWOCorrective-MwoID-<%%VALUE(id)%%>" class="MWOCorrective-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWOCorrective-MwoID-<%%VALUE(id)%%>" class="MWOCorrective-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWOCorrective-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOCorrective-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWOCorrective-fo_Position-<%%VALUE(id)%%>" class="MWOCorrective-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWOCorrective-ot_ap_Review-<%%VALUE(id)%%>" class="MWOCorrective-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
