--- a/devtemplate/templates/MWOPlanned_templateTV.html
+++ b/devtemplate/templates/MWOPlanned_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOPlanned-PlannedID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-PlannedID"><%%SELECT%%><%%VALUE(PlannedID)%%><%%ENDSELECT%%></td>
-		<td id="MWOPlanned-MwoID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWOPlanned-MwoID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWOPlanned-fo_EmployeeID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWOPlanned-fo_Position-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWOPlanned-ot_ap_Review-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
