--- a/devtemplate/templates/MWOPlanned_templateTVS.html
+++ b/devtemplate/templates/MWOPlanned_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOPlanned-PlannedID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-PlannedID"><%%VALUE(PlannedID)%%></td>
-		<td id="MWOPlanned-MwoID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWOPlanned-MwoID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWOPlanned-fo_EmployeeID-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWOPlanned-fo_Position-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWOPlanned-ot_ap_Review-<%%VALUE(WMOPlannedID)%%>" class="MWOPlanned-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
