--- a/devtemplate/templates/MWOReactive_templateTV.html
+++ b/devtemplate/templates/MWOReactive_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOReactive-ReactiveID-<%%VALUE(id)%%>" class="MWOReactive-ReactiveID"><%%SELECT%%><%%VALUE(ReactiveID)%%><%%ENDSELECT%%></td>
-		<td id="MWOReactive-MwoID-<%%VALUE(id)%%>" class="MWOReactive-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWOReactive-MwoID-<%%VALUE(id)%%>" class="MWOReactive-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWOReactive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOReactive-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWOReactive-fo_Position-<%%VALUE(id)%%>" class="MWOReactive-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWOReactive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOReactive-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
