--- a/devtemplate/templates/MWOpreventive_templateTVS.html
+++ b/devtemplate/templates/MWOpreventive_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOpreventive-PreventiveID-<%%VALUE(id)%%>" class="MWOpreventive-PreventiveID"><%%VALUE(PreventiveID)%%></td>
-		<td id="MWOpreventive-MwoID-<%%VALUE(id)%%>" class="MWOpreventive-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWOpreventive-MwoID-<%%VALUE(id)%%>" class="MWOpreventive-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWOpreventive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOpreventive-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWOpreventive-fo_Position-<%%VALUE(id)%%>" class="MWOpreventive-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWOpreventive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOpreventive-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
