--- a/devtemplate/templates/MWOproactive_templateTV.html
+++ b/devtemplate/templates/MWOproactive_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOproactive-ProactiveID-<%%VALUE(id)%%>" class="MWOproactive-ProactiveID"><%%SELECT%%><%%VALUE(ProactiveID)%%><%%ENDSELECT%%></td>
-		<td id="MWOproactive-MwoID-<%%VALUE(id)%%>" class="MWOproactive-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWOproactive-MwoID-<%%VALUE(id)%%>" class="MWOproactive-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWOproactive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOproactive-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWOproactive-fo_Position-<%%VALUE(id)%%>" class="MWOproactive-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWOproactive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOproactive-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
