--- a/devtemplate/templates/MonthlyTimesheet_templateTV.html
+++ b/devtemplate/templates/MonthlyTimesheet_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MonthlyTimesheet-TimesheetID-<%%VALUE(id)%%>" class="MonthlyTimesheet-TimesheetID"><%%SELECT%%><%%VALUE(TimesheetID)%%><%%ENDSELECT%%></td>
-		<td id="MonthlyTimesheet-MTSID-<%%VALUE(id)%%>" class="MonthlyTimesheet-MTSID text-right"><%%SELECT%%><%%VALUE(MTSID)%%><%%ENDSELECT%%></td>
+		<td id="MonthlyTimesheet-MTSID-<%%VALUE(id)%%>" class="MonthlyTimesheet-MTSID text-left"><%%SELECT%%><%%VALUE(MTSID)%%><%%ENDSELECT%%></td>
 		<td id="MonthlyTimesheet-fo_Class-<%%VALUE(id)%%>" class="MonthlyTimesheet-fo_Class"><%%SELECT%%><%%VALUE(fo_Class)%%><%%ENDSELECT%%></td>
 		<td id="MonthlyTimesheet-fo_DocItem-<%%VALUE(id)%%>" class="MonthlyTimesheet-fo_DocItem"><%%SELECT%%><%%VALUE(fo_DocItem)%%><%%ENDSELECT%%></td>
 		<td id="MonthlyTimesheet-ot_ap_Review-<%%VALUE(id)%%>" class="MonthlyTimesheet-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
