--- a/devtemplate/templates/NonConformance_templateTVS.html
+++ b/devtemplate/templates/NonConformance_templateTVS.html
@@ -10,7 +10,7 @@
 		<td id="NonConformance-fo_DocItem-<%%VALUE(id)%%>" class="NonConformance-fo_DocItem"><%%VALUE(fo_DocItem)%%></td>
 		<td id="NonConformance-fo_Classification-<%%VALUE(id)%%>" class="NonConformance-fo_Classification"><%%VALUE(fo_Classification)%%></td>
 		<td id="NonConformance-fo_Impact-<%%VALUE(id)%%>" class="NonConformance-fo_Impact"><%%VALUE(fo_Impact)%%></td>
-		<td id="NonConformance-fo_ClosedIssue-<%%VALUE(id)%%>" class="NonConformance-fo_ClosedIssue text-right"><%%VALUE(fo_ClosedIssue)%%></td>
+		<td id="NonConformance-fo_ClosedIssue-<%%VALUE(id)%%>" class="NonConformance-fo_ClosedIssue text-left"><%%VALUE(fo_ClosedIssue)%%></td>
 		<td id="NonConformance-ot_ap_Review-<%%VALUE(id)%%>" class="NonConformance-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="NonConformance-ot_ap_Approval-<%%VALUE(id)%%>" class="NonConformance-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="NonConformance-ot_ap_QC-<%%VALUE(id)%%>" class="NonConformance-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
