--- a/devtemplate/templates/PurchaseOrder_templateTV.html
+++ b/devtemplate/templates/PurchaseOrder_templateTV.html
@@ -6,11 +6,11 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="PurchaseOrder-POID-<%%VALUE(id)%%>" class="PurchaseOrder-POID"><%%SELECT%%><%%VALUE(POID)%%><%%ENDSELECT%%></td>
-		<td id="PurchaseOrder-OrderID-<%%VALUE(id)%%>" class="PurchaseOrder-OrderID text-right"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
-		<td id="PurchaseOrder-fo_Vendor-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Vendor text-right"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
+		<td id="PurchaseOrder-OrderID-<%%VALUE(id)%%>" class="PurchaseOrder-OrderID text-left"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
+		<td id="PurchaseOrder-fo_Vendor-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Vendor text-left"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
 		<td id="PurchaseOrder-fo_ShipVia-<%%VALUE(id)%%>" class="PurchaseOrder-fo_ShipVia"><%%SELECT%%><%%VALUE(fo_ShipVia)%%><%%ENDSELECT%%></td>
-		<td id="PurchaseOrder-fo_Price-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Price text-right"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
-		<td id="PurchaseOrder-fo_Discount-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Discount text-right"><%%SELECT%%><%%VALUE(fo_Discount)%%><%%ENDSELECT%%></td>
+		<td id="PurchaseOrder-fo_Price-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Price text-left"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
+		<td id="PurchaseOrder-fo_Discount-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Discount text-left"><%%SELECT%%><%%VALUE(fo_Discount)%%><%%ENDSELECT%%></td>
 		<td id="PurchaseOrder-ot_ap_Review-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="PurchaseOrder-ot_ap_Approval-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="PurchaseOrder-ot_ap_QC-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
