--- a/devtemplate/templates/Quotation_templateTV.html
+++ b/devtemplate/templates/Quotation_templateTV.html
@@ -6,10 +6,10 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Quotation-QuoID-<%%VALUE(id)%%>" class="Quotation-QuoID"><%%SELECT%%><%%VALUE(QuoID)%%><%%ENDSELECT%%></td>
-		<td id="Quotation-OrderID-<%%VALUE(id)%%>" class="Quotation-OrderID text-right"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
-		<td id="Quotation-fo_Vendor-<%%VALUE(id)%%>" class="Quotation-fo_Vendor text-right"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
+		<td id="Quotation-OrderID-<%%VALUE(id)%%>" class="Quotation-OrderID text-left"><%%SELECT%%><%%VALUE(OrderID)%%><%%ENDSELECT%%></td>
+		<td id="Quotation-fo_Vendor-<%%VALUE(id)%%>" class="Quotation-fo_Vendor text-left"><%%SELECT%%><%%VALUE(fo_Vendor)%%><%%ENDSELECT%%></td>
 		<td id="Quotation-fo_ShipVia-<%%VALUE(id)%%>" class="Quotation-fo_ShipVia"><%%SELECT%%><%%VALUE(fo_ShipVia)%%><%%ENDSELECT%%></td>
-		<td id="Quotation-fo_Price-<%%VALUE(id)%%>" class="Quotation-fo_Price text-right"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
+		<td id="Quotation-fo_Price-<%%VALUE(id)%%>" class="Quotation-fo_Price text-left"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
 		<td id="Quotation-ot_ap_Review-<%%VALUE(id)%%>" class="Quotation-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Quotation-ot_ap_Approval-<%%VALUE(id)%%>" class="Quotation-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="Quotation-ot_ap_QC-<%%VALUE(id)%%>" class="Quotation-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
