--- a/devtemplate/templates/Receivables_templateTV.html
+++ b/devtemplate/templates/Receivables_templateTV.html
@@ -9,7 +9,7 @@
 		<td id="Receivables-ProjectsID-<%%VALUE(id)%%>" class="Receivables-ProjectsID"><%%SELECT%%><%%VALUE(ProjectsID)%%><%%ENDSELECT%%></td>
 		<td id="Receivables-ResourcesID-<%%VALUE(id)%%>" class="Receivables-ResourcesID"><%%SELECT%%><%%VALUE(ResourcesID)%%><%%ENDSELECT%%></td>
 		<td id="Receivables-fo_Classification-<%%VALUE(id)%%>" class="Receivables-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
-		<td id="Receivables-fo_UnitPrice-<%%VALUE(id)%%>" class="Receivables-fo_UnitPrice text-right"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
+		<td id="Receivables-fo_UnitPrice-<%%VALUE(id)%%>" class="Receivables-fo_UnitPrice text-left"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
 		<td id="Receivables-ot_ap_Review-<%%VALUE(id)%%>" class="Receivables-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Receivables-ot_ap_Approval-<%%VALUE(id)%%>" class="Receivables-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="Receivables-ot_ap_QC-<%%VALUE(id)%%>" class="Receivables-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
