--- a/devtemplate/templates/Receivables_templateTVS.html
+++ b/devtemplate/templates/Receivables_templateTVS.html
@@ -9,7 +9,7 @@
 		<td id="Receivables-ProjectsID-<%%VALUE(id)%%>" class="Receivables-ProjectsID"><%%VALUE(ProjectsID)%%></td>
 		<td id="Receivables-ResourcesID-<%%VALUE(id)%%>" class="Receivables-ResourcesID"><%%VALUE(ResourcesID)%%></td>
 		<td id="Receivables-fo_Classification-<%%VALUE(id)%%>" class="Receivables-fo_Classification"><%%VALUE(fo_Classification)%%></td>
-		<td id="Receivables-fo_UnitPrice-<%%VALUE(id)%%>" class="Receivables-fo_UnitPrice text-right"><%%VALUE(fo_UnitPrice)%%></td>
+		<td id="Receivables-fo_UnitPrice-<%%VALUE(id)%%>" class="Receivables-fo_UnitPrice text-left"><%%VALUE(fo_UnitPrice)%%></td>
 		<td id="Receivables-ot_ap_Review-<%%VALUE(id)%%>" class="Receivables-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Receivables-ot_ap_Approval-<%%VALUE(id)%%>" class="Receivables-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="Receivables-ot_ap_QC-<%%VALUE(id)%%>" class="Receivables-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
