--- a/devtemplate/templates/ReportComment_templateTV.html
+++ b/devtemplate/templates/ReportComment_templateTV.html
@@ -5,7 +5,7 @@
 <!-- add the following to the ReportComment_init() hook (in hooks/ReportComment.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="ReportComment-PostID-<%%VALUE(RunningID)%%>" class="ReportComment-PostID text-right"><%%SELECT%%><%%VALUE(PostID)%%><%%ENDSELECT%%></td>
+		<td id="ReportComment-PostID-<%%VALUE(RunningID)%%>" class="ReportComment-PostID text-left"><%%SELECT%%><%%VALUE(PostID)%%><%%ENDSELECT%%></td>
 		<td id="ReportComment-TextPost-<%%VALUE(RunningID)%%>" class="ReportComment-TextPost"><%%SELECT%%><%%VALUE(TextPost)%%><%%ENDSELECT%%></td>
 		<td id="ReportComment-filed-<%%VALUE(RunningID)%%>" class="ReportComment-filed"><%%SELECT%%><%%VALUE(filed)%%><%%ENDSELECT%%></td>
 		<td id="ReportComment-last_modified-<%%VALUE(RunningID)%%>" class="ReportComment-last_modified"><%%SELECT%%><%%VALUE(last_modified)%%><%%ENDSELECT%%></td>
