--- a/devtemplate/templates/SoftboardComment_templateTVS.html
+++ b/devtemplate/templates/SoftboardComment_templateTVS.html
@@ -5,7 +5,7 @@
 <!-- add the following to the SoftboardComment_init() hook (in hooks/SoftboardComment.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="SoftboardComment-PostID-<%%VALUE(RunningID)%%>" class="SoftboardComment-PostID text-right"><%%VALUE(PostID)%%></td>
+		<td id="SoftboardComment-PostID-<%%VALUE(RunningID)%%>" class="SoftboardComment-PostID text-left"><%%VALUE(PostID)%%></td>
 		<td id="SoftboardComment-TextPost-<%%VALUE(RunningID)%%>" class="SoftboardComment-TextPost"><%%VALUE(TextPost)%%></td>
 		<td id="SoftboardComment-filed-<%%VALUE(RunningID)%%>" class="SoftboardComment-filed"><%%VALUE(filed)%%></td>
 		<td id="SoftboardComment-last_modified-<%%VALUE(RunningID)%%>" class="SoftboardComment-last_modified"><%%VALUE(last_modified)%%></td>
