--- a/devtemplate/templates/ToolBoxMeeting_templateTV.html
+++ b/devtemplate/templates/ToolBoxMeeting_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ToolBoxMeeting-tbmID-<%%VALUE(id)%%>" class="ToolBoxMeeting-tbmID"><%%SELECT%%><%%VALUE(tbmID)%%><%%ENDSELECT%%></td>
-		<td id="ToolBoxMeeting-ccpID-<%%VALUE(id)%%>" class="ToolBoxMeeting-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="ToolBoxMeeting-ccpID-<%%VALUE(id)%%>" class="ToolBoxMeeting-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="ToolBoxMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="ToolBoxMeeting-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="ToolBoxMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="ToolBoxMeeting-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="ToolBoxMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="ToolBoxMeeting-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
