--- a/devtemplate/templates/VenPerformance_templateTV.html
+++ b/devtemplate/templates/VenPerformance_templateTV.html
@@ -8,7 +8,7 @@
 		<td id="VenPerformance-VendPerfNumber-<%%VALUE(id)%%>" class="VenPerformance-VendPerfNumber"><%%SELECT%%><%%VALUE(VendPerfNumber)%%><%%ENDSELECT%%></td>
 		<td id="VenPerformance-DocItem-<%%VALUE(id)%%>" class="VenPerformance-DocItem"><%%SELECT%%><%%VALUE(DocItem)%%><%%ENDSELECT%%></td>
 		<td id="VenPerformance-fo_SupplierID-<%%VALUE(id)%%>" class="VenPerformance-fo_SupplierID"><%%SELECT%%><%%VALUE(fo_SupplierID)%%><%%ENDSELECT%%></td>
-		<td id="VenPerformance-fo_NewList-<%%VALUE(id)%%>" class="VenPerformance-fo_NewList text-right"><%%SELECT%%><%%VALUE(fo_NewList)%%><%%ENDSELECT%%></td>
+		<td id="VenPerformance-fo_NewList-<%%VALUE(id)%%>" class="VenPerformance-fo_NewList text-left"><%%SELECT%%><%%VALUE(fo_NewList)%%><%%ENDSELECT%%></td>
 		<td id="VenPerformance-fo_Classification-<%%VALUE(id)%%>" class="VenPerformance-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
 		<td id="VenPerformance-ot_ap_Review-<%%VALUE(id)%%>" class="VenPerformance-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="VenPerformance-ot_ap_Approval-<%%VALUE(id)%%>" class="VenPerformance-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
