--- a/devtemplate/templates/batches_templateTV.html
+++ b/devtemplate/templates/batches_templateTV.html
@@ -10,6 +10,6 @@
 		<td id="batches-fo_suppliers-<%%VALUE(id)%%>" class="batches-fo_suppliers"><%%SELECT%%><%%VALUE(fo_suppliers)%%><%%ENDSELECT%%></td>
 		<td id="batches-fo_manudate-<%%VALUE(id)%%>" class="batches-fo_manudate"><%%SELECT%%><%%VALUE(fo_manudate)%%><%%ENDSELECT%%></td>
 		<td id="batches-fo_expdate-<%%VALUE(id)%%>" class="batches-fo_expdate"><%%SELECT%%><%%VALUE(fo_expdate)%%><%%ENDSELECT%%></td>
-		<td id="batches-fo_Quantity-<%%VALUE(id)%%>" class="batches-fo_Quantity text-right"><%%SELECT%%><%%VALUE(fo_Quantity)%%><%%ENDSELECT%%></td>
+		<td id="batches-fo_Quantity-<%%VALUE(id)%%>" class="batches-fo_Quantity text-left"><%%SELECT%%><%%VALUE(fo_Quantity)%%><%%ENDSELECT%%></td>
 		<td id="batches-fo_ap_filed-<%%VALUE(id)%%>" class="batches-fo_ap_filed"><%%SELECT%%><%%VALUE(fo_ap_filed)%%><%%ENDSELECT%%></td>
 		<td id="batches-fo_lastmodified-<%%VALUE(id)%%>" class="batches-fo_lastmodified"><%%SELECT%%><%%VALUE(fo_lastmodified)%%><%%ENDSELECT%%></td>
