--- a/devtemplate/templates/batches_templateTVS.html
+++ b/devtemplate/templates/batches_templateTVS.html
@@ -10,6 +10,6 @@
 		<td id="batches-fo_suppliers-<%%VALUE(id)%%>" class="batches-fo_suppliers"><%%VALUE(fo_suppliers)%%></td>
 		<td id="batches-fo_manudate-<%%VALUE(id)%%>" class="batches-fo_manudate"><%%VALUE(fo_manudate)%%></td>
 		<td id="batches-fo_expdate-<%%VALUE(id)%%>" class="batches-fo_expdate"><%%VALUE(fo_expdate)%%></td>
-		<td id="batches-fo_Quantity-<%%VALUE(id)%%>" class="batches-fo_Quantity text-right"><%%VALUE(fo_Quantity)%%></td>
+		<td id="batches-fo_Quantity-<%%VALUE(id)%%>" class="batches-fo_Quantity text-left"><%%VALUE(fo_Quantity)%%></td>
 		<td id="batches-fo_ap_filed-<%%VALUE(id)%%>" class="batches-fo_ap_filed"><%%VALUE(fo_ap_filed)%%></td>
 		<td id="batches-fo_lastmodified-<%%VALUE(id)%%>" class="batches-fo_lastmodified"><%%VALUE(fo_lastmodified)%%></td>
