--- a/devtemplate/templates/vendor_templateTV.html
+++ b/devtemplate/templates/vendor_templateTV.html
@@ -7,7 +7,7 @@
 
 		<td id="vendor-CompanyID-<%%VALUE(VendorID)%%>" class="vendor-CompanyID"><%%SELECT%%><%%VALUE(CompanyID)%%><%%ENDSELECT%%></td>
 		<td id="vendor-CopanyName-<%%VALUE(VendorID)%%>" class="vendor-CopanyName"><%%SELECT%%><%%VALUE(CopanyName)%%><%%ENDSELECT%%></td>
-		<td id="vendor-fo_AVList-<%%VALUE(VendorID)%%>" class="vendor-fo_AVList text-right"><%%SELECT%%><%%VALUE(fo_AVList)%%><%%ENDSELECT%%></td>
+		<td id="vendor-fo_AVList-<%%VALUE(VendorID)%%>" class="vendor-fo_AVList text-left"><%%SELECT%%><%%VALUE(fo_AVList)%%><%%ENDSELECT%%></td>
 		<td id="vendor-fo_ContactTitle-<%%VALUE(VendorID)%%>" class="vendor-fo_ContactTitle"><%%SELECT%%><%%VALUE(fo_ContactTitle)%%><%%ENDSELECT%%></td>
 		<td id="vendor-fo_HomePage-<%%VALUE(VendorID)%%>" class="vendor-fo_HomePage"><a href="link.php?t=vendor&f=fo_HomePage&i=<%%VALUE(VendorID)%%>" target="_blank" title="<%%VALUE(fo_HomePage)%%>" class="btn btn-outline-plain"><i class="glyphicon glyphicon-globe text-info"></i></a></td>
 		<td id="vendor-ot_ap_Review-<%%VALUE(VendorID)%%>" class="vendor-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
