--- a/devtemplate/templates/AccountPayables_templateTVS.html
+++ b/devtemplate/templates/AccountPayables_templateTVS.html
@@ -6,10 +6,10 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="AccountPayables-APID-<%%VALUE(id)%%>" class="AccountPayables-APID"><%%VALUE(APID)%%></td>
-		<td id="AccountPayables-OrderID-<%%VALUE(id)%%>" class="AccountPayables-OrderID text-right"><%%VALUE(OrderID)%%></td>
-		<td id="AccountPayables-fo_Vendor-<%%VALUE(id)%%>" class="AccountPayables-fo_Vendor text-right"><%%VALUE(fo_Vendor)%%></td>
+		<td id="AccountPayables-OrderID-<%%VALUE(id)%%>" class="AccountPayables-OrderID text-left"><%%VALUE(OrderID)%%></td>
+		<td id="AccountPayables-fo_Vendor-<%%VALUE(id)%%>" class="AccountPayables-fo_Vendor text-left"><%%VALUE(fo_Vendor)%%></td>
 		<td id="AccountPayables-fo_ShipVia-<%%VALUE(id)%%>" class="AccountPayables-fo_ShipVia"><%%VALUE(fo_ShipVia)%%></td>
-		<td id="AccountPayables-fo_UnitPrice-<%%VALUE(id)%%>" class="AccountPayables-fo_UnitPrice text-right"><%%VALUE(fo_UnitPrice)%%></td>
+		<td id="AccountPayables-fo_UnitPrice-<%%VALUE(id)%%>" class="AccountPayables-fo_UnitPrice text-left"><%%VALUE(fo_UnitPrice)%%></td>
 		<td id="AccountPayables-ot_ap_Review-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="AccountPayables-ot_ap_Approval-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="AccountPayables-ot_ap_QC-<%%VALUE(id)%%>" class="AccountPayables-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
