--- a/devtemplate/templates/Bi_WeeklyMeeting_templateTVS.html
+++ b/devtemplate/templates/Bi_WeeklyMeeting_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Bi_WeeklyMeeting-BwmID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-BwmID"><%%VALUE(BwmID)%%></td>
-		<td id="Bi_WeeklyMeeting-ccpID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="Bi_WeeklyMeeting-ccpID-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="Bi_WeeklyMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="Bi_WeeklyMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Bi_WeeklyMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="Bi_WeeklyMeeting-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
