--- a/devtemplate/templates/Campaign_templateTVS.html
+++ b/devtemplate/templates/Campaign_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Campaign-CampaignID-<%%VALUE(id)%%>" class="Campaign-CampaignID"><%%VALUE(CampaignID)%%></td>
-		<td id="Campaign-ccpID-<%%VALUE(id)%%>" class="Campaign-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="Campaign-ccpID-<%%VALUE(id)%%>" class="Campaign-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="Campaign-fo_RequiredDate-<%%VALUE(id)%%>" class="Campaign-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="Campaign-ot_ap_Review-<%%VALUE(id)%%>" class="Campaign-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Campaign-ot_ap_Approval-<%%VALUE(id)%%>" class="Campaign-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
