--- a/devtemplate/templates/ClaimRecord_templateTV.html
+++ b/devtemplate/templates/ClaimRecord_templateTV.html
@@ -6,9 +6,9 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ClaimRecord-CRID-<%%VALUE(id)%%>" class="ClaimRecord-CRID"><%%SELECT%%><%%VALUE(CRID)%%><%%ENDSELECT%%></td>
-		<td id="ClaimRecord-ReceivablesID-<%%VALUE(id)%%>" class="ClaimRecord-ReceivablesID text-right"><%%SELECT%%><%%VALUE(ReceivablesID)%%><%%ENDSELECT%%></td>
+		<td id="ClaimRecord-ReceivablesID-<%%VALUE(id)%%>" class="ClaimRecord-ReceivablesID text-left"><%%SELECT%%><%%VALUE(ReceivablesID)%%><%%ENDSELECT%%></td>
 		<td id="ClaimRecord-fo_DocItem-<%%VALUE(id)%%>" class="ClaimRecord-fo_DocItem"><%%SELECT%%><%%VALUE(fo_DocItem)%%><%%ENDSELECT%%></td>
-		<td id="ClaimRecord-fo_UnitPrice-<%%VALUE(id)%%>" class="ClaimRecord-fo_UnitPrice text-right"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
+		<td id="ClaimRecord-fo_UnitPrice-<%%VALUE(id)%%>" class="ClaimRecord-fo_UnitPrice text-left"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
 		<td id="ClaimRecord-ot_ap_Review-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="ClaimRecord-ot_ap_Approval-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="ClaimRecord-ot_ap_QC-<%%VALUE(id)%%>" class="ClaimRecord-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
