--- a/devtemplate/templates/DCN_templateTV.html
+++ b/devtemplate/templates/DCN_templateTV.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DCN-DocconNumber-<%%VALUE(id)%%>" class="DCN-DocconNumber"><%%SELECT%%><%%VALUE(DocconNumber)%%><%%ENDSELECT%%></td>
-		<td id="DCN-DCCID-<%%VALUE(id)%%>" class="DCN-DCCID text-right"><%%SELECT%%><%%VALUE(DCCID)%%><%%ENDSELECT%%></td>
-		<td id="DCN-fo_DCCITEM-<%%VALUE(id)%%>" class="DCN-fo_DCCITEM text-right"><%%SELECT%%><%%VALUE(fo_DCCITEM)%%><%%ENDSELECT%%></td>
+		<td id="DCN-DCCID-<%%VALUE(id)%%>" class="DCN-DCCID text-left"><%%SELECT%%><%%VALUE(DCCID)%%><%%ENDSELECT%%></td>
+		<td id="DCN-fo_DCCITEM-<%%VALUE(id)%%>" class="DCN-fo_DCCITEM text-left"><%%SELECT%%><%%VALUE(fo_DCCITEM)%%><%%ENDSELECT%%></td>
 		<td id="DCN-ot_ap_Review-<%%VALUE(id)%%>" class="DCN-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="DCN-ot_ap_Approval-<%%VALUE(id)%%>" class="DCN-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="DCN-ot_ap_QC-<%%VALUE(id)%%>" class="DCN-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
