--- a/devtemplate/templates/DCN_templateTVS.html
+++ b/devtemplate/templates/DCN_templateTVS.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DCN-DocconNumber-<%%VALUE(id)%%>" class="DCN-DocconNumber"><%%VALUE(DocconNumber)%%></td>
-		<td id="DCN-DCCID-<%%VALUE(id)%%>" class="DCN-DCCID text-right"><%%VALUE(DCCID)%%></td>
-		<td id="DCN-fo_DCCITEM-<%%VALUE(id)%%>" class="DCN-fo_DCCITEM text-right"><%%VALUE(fo_DCCITEM)%%></td>
+		<td id="DCN-DCCID-<%%VALUE(id)%%>" class="DCN-DCCID text-left"><%%VALUE(DCCID)%%></td>
+		<td id="DCN-fo_DCCITEM-<%%VALUE(id)%%>" class="DCN-fo_DCCITEM text-left"><%%VALUE(fo_DCCITEM)%%></td>
 		<td id="DCN-ot_ap_Review-<%%VALUE(id)%%>" class="DCN-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="DCN-ot_ap_Approval-<%%VALUE(id)%%>" class="DCN-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="DCN-ot_ap_QC-<%%VALUE(id)%%>" class="DCN-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
