--- a/devtemplate/templates/DesignProposal_templateTV.html
+++ b/devtemplate/templates/DesignProposal_templateTV.html
@@ -10,7 +10,7 @@
 		<td id="DesignProposal-fo_Type-<%%VALUE(id)%%>" class="DesignProposal-fo_Type"><%%SELECT%%><%%VALUE(fo_Type)%%><%%ENDSELECT%%></td>
 		<td id="DesignProposal-fo_Intro-<%%VALUE(id)%%>" class="DesignProposal-fo_Intro"><%%SELECT%%><%%VALUE(fo_Intro)%%><%%ENDSELECT%%></td>
 		<td id="DesignProposal-fo_RecSub-<%%VALUE(id)%%>" class="DesignProposal-fo_RecSub"><%%SELECT%%><%%VALUE(fo_RecSub)%%><%%ENDSELECT%%></td>
-		<td id="DesignProposal-fo_Price-<%%VALUE(id)%%>" class="DesignProposal-fo_Price text-right"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
+		<td id="DesignProposal-fo_Price-<%%VALUE(id)%%>" class="DesignProposal-fo_Price text-left"><%%SELECT%%><%%VALUE(fo_Price)%%><%%ENDSELECT%%></td>
 		<td id="DesignProposal-ot_ap_Review-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="DesignProposal-ot_ap_Approval-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="DesignProposal-ot_ap_QC-<%%VALUE(id)%%>" class="DesignProposal-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
