--- a/devtemplate/templates/DrillNInspection_templateTV.html
+++ b/devtemplate/templates/DrillNInspection_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="DrillNInspection-DillID-<%%VALUE(id)%%>" class="DrillNInspection-DillID"><%%SELECT%%><%%VALUE(DillID)%%><%%ENDSELECT%%></td>
-		<td id="DrillNInspection-ccpID-<%%VALUE(id)%%>" class="DrillNInspection-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="DrillNInspection-ccpID-<%%VALUE(id)%%>" class="DrillNInspection-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="DrillNInspection-fo_Classification-<%%VALUE(id)%%>" class="DrillNInspection-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
 		<td id="DrillNInspection-fo_RequiredDate-<%%VALUE(id)%%>" class="DrillNInspection-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="DrillNInspection-ot_ap_Review-<%%VALUE(id)%%>" class="DrillNInspection-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
