--- a/devtemplate/templates/EventNotification_templateTVS.html
+++ b/devtemplate/templates/EventNotification_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="EventNotification-ENID-<%%VALUE(id)%%>" class="EventNotification-ENID"><%%VALUE(ENID)%%></td>
-		<td id="EventNotification-ccpID-<%%VALUE(id)%%>" class="EventNotification-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="EventNotification-ccpID-<%%VALUE(id)%%>" class="EventNotification-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="EventNotification-fo_RequiredDate-<%%VALUE(id)%%>" class="EventNotification-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="EventNotification-ot_ap_filed-<%%VALUE(id)%%>" class="EventNotification-ot_ap_filed"><%%VALUE(ot_ap_filed)%%></td>
 		<td id="EventNotification-ot_ap_lastmodified-<%%VALUE(id)%%>" class="EventNotification-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
