--- a/devtemplate/templates/Inventory_templateTV.html
+++ b/devtemplate/templates/Inventory_templateTV.html
@@ -10,7 +10,7 @@
 		<td id="Inventory-fo_Type-<%%VALUE(id)%%>" class="Inventory-fo_Type"><%%SELECT%%><%%VALUE(fo_Type)%%><%%ENDSELECT%%></td>
 		<td id="Inventory-fo_Manufacturer-<%%VALUE(id)%%>" class="Inventory-fo_Manufacturer"><%%SELECT%%><%%VALUE(fo_Manufacturer)%%><%%ENDSELECT%%></td>
 		<td id="Inventory-fo_Condition-<%%VALUE(id)%%>" class="Inventory-fo_Condition"><%%SELECT%%><%%VALUE(fo_Condition)%%><%%ENDSELECT%%></td>
-		<td id="Inventory-fo_UnitPrice-<%%VALUE(id)%%>" class="Inventory-fo_UnitPrice text-right"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
+		<td id="Inventory-fo_UnitPrice-<%%VALUE(id)%%>" class="Inventory-fo_UnitPrice text-left"><%%SELECT%%><%%VALUE(fo_UnitPrice)%%><%%ENDSELECT%%></td>
 		<td id="Inventory-ot_ap_Review-<%%VALUE(id)%%>" class="Inventory-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="Inventory-ot_ap_Approval-<%%VALUE(id)%%>" class="Inventory-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="Inventory-ot_ap_QC-<%%VALUE(id)%%>" class="Inventory-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
