--- a/devtemplate/templates/Inventory_templateTVS.html
+++ b/devtemplate/templates/Inventory_templateTVS.html
@@ -10,7 +10,7 @@
 		<td id="Inventory-fo_Type-<%%VALUE(id)%%>" class="Inventory-fo_Type"><%%VALUE(fo_Type)%%></td>
 		<td id="Inventory-fo_Manufacturer-<%%VALUE(id)%%>" class="Inventory-fo_Manufacturer"><%%VALUE(fo_Manufacturer)%%></td>
 		<td id="Inventory-fo_Condition-<%%VALUE(id)%%>" class="Inventory-fo_Condition"><%%VALUE(fo_Condition)%%></td>
-		<td id="Inventory-fo_UnitPrice-<%%VALUE(id)%%>" class="Inventory-fo_UnitPrice text-right"><%%VALUE(fo_UnitPrice)%%></td>
+		<td id="Inventory-fo_UnitPrice-<%%VALUE(id)%%>" class="Inventory-fo_UnitPrice text-left"><%%VALUE(fo_UnitPrice)%%></td>
 		<td id="Inventory-ot_ap_Review-<%%VALUE(id)%%>" class="Inventory-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Inventory-ot_ap_Approval-<%%VALUE(id)%%>" class="Inventory-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="Inventory-ot_ap_QC-<%%VALUE(id)%%>" class="Inventory-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
