--- a/devtemplate/templates/Item_templateTVS.html
+++ b/devtemplate/templates/Item_templateTVS.html
@@ -9,7 +9,7 @@
 		<td id="Item-ProductName-<%%VALUE(ProductID)%%>" class="Item-ProductName"><%%VALUE(ProductName)%%></td>
 		<td id="Item-fo_SupplierID-<%%VALUE(ProductID)%%>" class="Item-fo_SupplierID"><%%VALUE(fo_SupplierID)%%></td>
 		<td id="Item-fo_CategoryID-<%%VALUE(ProductID)%%>" class="Item-fo_CategoryID"><%%VALUE(fo_CategoryID)%%></td>
-		<td id="Item-fo_UnitPrice-<%%VALUE(ProductID)%%>" class="Item-fo_UnitPrice text-right"><%%VALUE(fo_UnitPrice)%%></td>
-		<td id="Item-fo_Discontinued-<%%VALUE(ProductID)%%>" class="Item-fo_Discontinued text-right"><%%VALUE(fo_Discontinued)%%></td>
+		<td id="Item-fo_UnitPrice-<%%VALUE(ProductID)%%>" class="Item-fo_UnitPrice text-left"><%%VALUE(fo_UnitPrice)%%></td>
+		<td id="Item-fo_Discontinued-<%%VALUE(ProductID)%%>" class="Item-fo_Discontinued text-left"><%%VALUE(fo_Discontinued)%%></td>
 		<td id="Item-ot_ap_filed-<%%VALUE(ProductID)%%>" class="Item-ot_ap_filed"><%%VALUE(ot_ap_filed)%%></td>
 		<td id="Item-ot_ap_lastmodified-<%%VALUE(ProductID)%%>" class="Item-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
