--- a/devtemplate/templates/MWOCorrective_templateTV.html
+++ b/devtemplate/templates/MWOCorrective_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOCorrective-CorrectiveID-<%%VALUE(id)%%>" class="MWOCorrective-CorrectiveID"><%%SELECT%%><%%VALUE(CorrectiveID)%%><%%ENDSELECT%%></td>
-		<td id="MWOCorrective-MwoID-<%%VALUE(id)%%>" class="MWOCorrective-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWOCorrective-MwoID-<%%VALUE(id)%%>" class="MWOCorrective-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWOCorrective-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOCorrective-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWOCorrective-fo_Position-<%%VALUE(id)%%>" class="MWOCorrective-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWOCorrective-ot_ap_Review-<%%VALUE(id)%%>" class="MWOCorrective-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
