--- a/devtemplate/templates/MWOReactive_templateTVS.html
+++ b/devtemplate/templates/MWOReactive_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOReactive-ReactiveID-<%%VALUE(id)%%>" class="MWOReactive-ReactiveID"><%%VALUE(ReactiveID)%%></td>
-		<td id="MWOReactive-MwoID-<%%VALUE(id)%%>" class="MWOReactive-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWOReactive-MwoID-<%%VALUE(id)%%>" class="MWOReactive-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWOReactive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOReactive-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWOReactive-fo_Position-<%%VALUE(id)%%>" class="MWOReactive-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWOReactive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOReactive-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
