--- a/devtemplate/templates/MWOpreventive_templateTV.html
+++ b/devtemplate/templates/MWOpreventive_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOpreventive-PreventiveID-<%%VALUE(id)%%>" class="MWOpreventive-PreventiveID"><%%SELECT%%><%%VALUE(PreventiveID)%%><%%ENDSELECT%%></td>
-		<td id="MWOpreventive-MwoID-<%%VALUE(id)%%>" class="MWOpreventive-MwoID text-right"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
+		<td id="MWOpreventive-MwoID-<%%VALUE(id)%%>" class="MWOpreventive-MwoID text-left"><%%SELECT%%><%%VALUE(MwoID)%%><%%ENDSELECT%%></td>
 		<td id="MWOpreventive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOpreventive-fo_EmployeeID"><%%SELECT%%><%%VALUE(fo_EmployeeID)%%><%%ENDSELECT%%></td>
 		<td id="MWOpreventive-fo_Position-<%%VALUE(id)%%>" class="MWOpreventive-fo_Position"><%%SELECT%%><%%VALUE(fo_Position)%%><%%ENDSELECT%%></td>
 		<td id="MWOpreventive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOpreventive-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
