--- a/devtemplate/templates/MWOproactive_templateTVS.html
+++ b/devtemplate/templates/MWOproactive_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MWOproactive-ProactiveID-<%%VALUE(id)%%>" class="MWOproactive-ProactiveID"><%%VALUE(ProactiveID)%%></td>
-		<td id="MWOproactive-MwoID-<%%VALUE(id)%%>" class="MWOproactive-MwoID text-right"><%%VALUE(MwoID)%%></td>
+		<td id="MWOproactive-MwoID-<%%VALUE(id)%%>" class="MWOproactive-MwoID text-left"><%%VALUE(MwoID)%%></td>
 		<td id="MWOproactive-fo_EmployeeID-<%%VALUE(id)%%>" class="MWOproactive-fo_EmployeeID"><%%VALUE(fo_EmployeeID)%%></td>
 		<td id="MWOproactive-fo_Position-<%%VALUE(id)%%>" class="MWOproactive-fo_Position"><%%VALUE(fo_Position)%%></td>
 		<td id="MWOproactive-ot_ap_Review-<%%VALUE(id)%%>" class="MWOproactive-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
