--- a/devtemplate/templates/MonthlyTimesheet_templateTVS.html
+++ b/devtemplate/templates/MonthlyTimesheet_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="MonthlyTimesheet-TimesheetID-<%%VALUE(id)%%>" class="MonthlyTimesheet-TimesheetID"><%%VALUE(TimesheetID)%%></td>
-		<td id="MonthlyTimesheet-MTSID-<%%VALUE(id)%%>" class="MonthlyTimesheet-MTSID text-right"><%%VALUE(MTSID)%%></td>
+		<td id="MonthlyTimesheet-MTSID-<%%VALUE(id)%%>" class="MonthlyTimesheet-MTSID text-left"><%%VALUE(MTSID)%%></td>
 		<td id="MonthlyTimesheet-fo_Class-<%%VALUE(id)%%>" class="MonthlyTimesheet-fo_Class"><%%VALUE(fo_Class)%%></td>
 		<td id="MonthlyTimesheet-fo_DocItem-<%%VALUE(id)%%>" class="MonthlyTimesheet-fo_DocItem"><%%VALUE(fo_DocItem)%%></td>
 		<td id="MonthlyTimesheet-ot_ap_Review-<%%VALUE(id)%%>" class="MonthlyTimesheet-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
