--- a/devtemplate/templates/NonConformance_templateTV.html
+++ b/devtemplate/templates/NonConformance_templateTV.html
@@ -10,7 +10,7 @@
 		<td id="NonConformance-fo_DocItem-<%%VALUE(id)%%>" class="NonConformance-fo_DocItem"><%%SELECT%%><%%VALUE(fo_DocItem)%%><%%ENDSELECT%%></td>
 		<td id="NonConformance-fo_Classification-<%%VALUE(id)%%>" class="NonConformance-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
 		<td id="NonConformance-fo_Impact-<%%VALUE(id)%%>" class="NonConformance-fo_Impact"><%%SELECT%%><%%VALUE(fo_Impact)%%><%%ENDSELECT%%></td>
-		<td id="NonConformance-fo_ClosedIssue-<%%VALUE(id)%%>" class="NonConformance-fo_ClosedIssue text-right"><%%SELECT%%><%%VALUE(fo_ClosedIssue)%%><%%ENDSELECT%%></td>
+		<td id="NonConformance-fo_ClosedIssue-<%%VALUE(id)%%>" class="NonConformance-fo_ClosedIssue text-left"><%%SELECT%%><%%VALUE(fo_ClosedIssue)%%><%%ENDSELECT%%></td>
 		<td id="NonConformance-ot_ap_Review-<%%VALUE(id)%%>" class="NonConformance-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="NonConformance-ot_ap_Approval-<%%VALUE(id)%%>" class="NonConformance-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="NonConformance-ot_ap_QC-<%%VALUE(id)%%>" class="NonConformance-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
