--- a/devtemplate/templates/PurchaseOrder_templateTVS.html
+++ b/devtemplate/templates/PurchaseOrder_templateTVS.html
@@ -6,11 +6,11 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="PurchaseOrder-POID-<%%VALUE(id)%%>" class="PurchaseOrder-POID"><%%VALUE(POID)%%></td>
-		<td id="PurchaseOrder-OrderID-<%%VALUE(id)%%>" class="PurchaseOrder-OrderID text-right"><%%VALUE(OrderID)%%></td>
-		<td id="PurchaseOrder-fo_Vendor-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Vendor text-right"><%%VALUE(fo_Vendor)%%></td>
+		<td id="PurchaseOrder-OrderID-<%%VALUE(id)%%>" class="PurchaseOrder-OrderID text-left"><%%VALUE(OrderID)%%></td>
+		<td id="PurchaseOrder-fo_Vendor-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Vendor text-left"><%%VALUE(fo_Vendor)%%></td>
 		<td id="PurchaseOrder-fo_ShipVia-<%%VALUE(id)%%>" class="PurchaseOrder-fo_ShipVia"><%%VALUE(fo_ShipVia)%%></td>
-		<td id="PurchaseOrder-fo_Price-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Price text-right"><%%VALUE(fo_Price)%%></td>
-		<td id="PurchaseOrder-fo_Discount-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Discount text-right"><%%VALUE(fo_Discount)%%></td>
+		<td id="PurchaseOrder-fo_Price-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Price text-left"><%%VALUE(fo_Price)%%></td>
+		<td id="PurchaseOrder-fo_Discount-<%%VALUE(id)%%>" class="PurchaseOrder-fo_Discount text-left"><%%VALUE(fo_Discount)%%></td>
 		<td id="PurchaseOrder-ot_ap_Review-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="PurchaseOrder-ot_ap_Approval-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="PurchaseOrder-ot_ap_QC-<%%VALUE(id)%%>" class="PurchaseOrder-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
