--- a/devtemplate/templates/Quotation_templateTVS.html
+++ b/devtemplate/templates/Quotation_templateTVS.html
@@ -6,10 +6,10 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="Quotation-QuoID-<%%VALUE(id)%%>" class="Quotation-QuoID"><%%VALUE(QuoID)%%></td>
-		<td id="Quotation-OrderID-<%%VALUE(id)%%>" class="Quotation-OrderID text-right"><%%VALUE(OrderID)%%></td>
-		<td id="Quotation-fo_Vendor-<%%VALUE(id)%%>" class="Quotation-fo_Vendor text-right"><%%VALUE(fo_Vendor)%%></td>
+		<td id="Quotation-OrderID-<%%VALUE(id)%%>" class="Quotation-OrderID text-left"><%%VALUE(OrderID)%%></td>
+		<td id="Quotation-fo_Vendor-<%%VALUE(id)%%>" class="Quotation-fo_Vendor text-left"><%%VALUE(fo_Vendor)%%></td>
 		<td id="Quotation-fo_ShipVia-<%%VALUE(id)%%>" class="Quotation-fo_ShipVia"><%%VALUE(fo_ShipVia)%%></td>
-		<td id="Quotation-fo_Price-<%%VALUE(id)%%>" class="Quotation-fo_Price text-right"><%%VALUE(fo_Price)%%></td>
+		<td id="Quotation-fo_Price-<%%VALUE(id)%%>" class="Quotation-fo_Price text-left"><%%VALUE(fo_Price)%%></td>
 		<td id="Quotation-ot_ap_Review-<%%VALUE(id)%%>" class="Quotation-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="Quotation-ot_ap_Approval-<%%VALUE(id)%%>" class="Quotation-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="Quotation-ot_ap_QC-<%%VALUE(id)%%>" class="Quotation-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
