--- a/devtemplate/templates/ReportComment_templateTVS.html
+++ b/devtemplate/templates/ReportComment_templateTVS.html
@@ -5,7 +5,7 @@
 <!-- add the following to the ReportComment_init() hook (in hooks/ReportComment.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="ReportComment-PostID-<%%VALUE(RunningID)%%>" class="ReportComment-PostID text-right"><%%VALUE(PostID)%%></td>
+		<td id="ReportComment-PostID-<%%VALUE(RunningID)%%>" class="ReportComment-PostID text-left"><%%VALUE(PostID)%%></td>
 		<td id="ReportComment-TextPost-<%%VALUE(RunningID)%%>" class="ReportComment-TextPost"><%%VALUE(TextPost)%%></td>
 		<td id="ReportComment-filed-<%%VALUE(RunningID)%%>" class="ReportComment-filed"><%%VALUE(filed)%%></td>
 		<td id="ReportComment-last_modified-<%%VALUE(RunningID)%%>" class="ReportComment-last_modified"><%%VALUE(last_modified)%%></td>
