--- a/devtemplate/templates/ToolBoxMeeting_templateTVS.html
+++ b/devtemplate/templates/ToolBoxMeeting_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ToolBoxMeeting-tbmID-<%%VALUE(id)%%>" class="ToolBoxMeeting-tbmID"><%%VALUE(tbmID)%%></td>
-		<td id="ToolBoxMeeting-ccpID-<%%VALUE(id)%%>" class="ToolBoxMeeting-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="ToolBoxMeeting-ccpID-<%%VALUE(id)%%>" class="ToolBoxMeeting-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="ToolBoxMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="ToolBoxMeeting-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="ToolBoxMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="ToolBoxMeeting-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="ToolBoxMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="ToolBoxMeeting-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
