--- a/devtemplate/templates/VenPerformance_templateTVS.html
+++ b/devtemplate/templates/VenPerformance_templateTVS.html
@@ -8,7 +8,7 @@
 		<td id="VenPerformance-VendPerfNumber-<%%VALUE(id)%%>" class="VenPerformance-VendPerfNumber"><%%VALUE(VendPerfNumber)%%></td>
 		<td id="VenPerformance-DocItem-<%%VALUE(id)%%>" class="VenPerformance-DocItem"><%%VALUE(DocItem)%%></td>
 		<td id="VenPerformance-fo_SupplierID-<%%VALUE(id)%%>" class="VenPerformance-fo_SupplierID"><%%VALUE(fo_SupplierID)%%></td>
-		<td id="VenPerformance-fo_NewList-<%%VALUE(id)%%>" class="VenPerformance-fo_NewList text-right"><%%VALUE(fo_NewList)%%></td>
+		<td id="VenPerformance-fo_NewList-<%%VALUE(id)%%>" class="VenPerformance-fo_NewList text-left"><%%VALUE(fo_NewList)%%></td>
 		<td id="VenPerformance-fo_Classification-<%%VALUE(id)%%>" class="VenPerformance-fo_Classification"><%%VALUE(fo_Classification)%%></td>
 		<td id="VenPerformance-ot_ap_Review-<%%VALUE(id)%%>" class="VenPerformance-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="VenPerformance-ot_ap_Approval-<%%VALUE(id)%%>" class="VenPerformance-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
